--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <br><br><br>     
         <div class="baner">
             <img src="imagens/Foto1.jpg" alt="Foto do Perfil: Foto da Professora Diane." 
-            width="20%" height="350px">
+            width="350px" height="400px">
 
             <img src="imagens/Foto2.jpg" alt="Foto do Perfil: Foto da Professora Diane." 
-            width="20%" height="350px">
+            width="350px" height="400px">
 
             <img src="imagens/Foto3.jpg" alt="Foto do Perfil: Foto da Professora Diane." 
-            width="20%" height="350px">
+            width="350px" height="400px">
         </div>
         <br><br>
         <h3 class="h3">Acesse o Menu do Nosso Blog</h3>
