--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>
-            Blog da Professora Diane
+            Blog da Professora Diane Giovanini
         </h1>
         <br><br>
         <h2>Fotos do Perfil</h2> 
