--- a/videoApresentacao.html
+++ b/videoApresentacao.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Blog da Professora Diane</h1> 
         <br><br>       
-        <h2>Vídeo de Apresentação da Professora Diane</h2>
+        <h2>Vídeo de Apresentação da Professora Diane Giovanini</h2>
         <br><br><br>        
         <div>
             <br><br>
