--- a/curiosidade.html
+++ b/curiosidade.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet"  href="css/curiosidade.css">
     </head>
     <body>
-        <h1>Blog da Professora Diane</h1>
+        <h1>Blog da Professora Diane Giovanini</h1>
         <br>        
         <h2 class="h2-1">Curiosidade da Professora Diane</h2>
         <br><br>             
