--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet"  href="css/login.css">
     </head>
     <body>
-        <h1>Blog da Professora Diane</h1>
+        <h1>Blog da Professora Diane Giovanini</h1>
         <br>        
         <h2 class="h2-1">Login do Blog da Professora Diane</h2>
         <br><br>             
