--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Blog da Professora Diane</h1>
         <br>        
-        <h2 class="h2-1">Sobre a Professora Diane</h2>
+        <h2 class="h2-1">Sobre a Professora Diane Giovanini</h2>
         <br><br>             
         <div class="sair">
             <br>
