--- a/contato.html
+++ b/contato.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Blog da Professora Diane Giovanini</h1>
         <br>        
-        <h2 class="h2-1">Contatos da Professora Diane:</h2>
+        <h2 class="h2-1">Contatos:</h2>
         <br><br><br>
         <h4>Telefone:</h4>
         <br>
