--- a/formacaoAcademica.html
+++ b/formacaoAcademica.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Blog da Professora Diane Giovanini</h1>
         <br>        
-        <h2 class="h2-1">Formação Acadêmica da Professora Diane</h2>
+        <h2 class="h2-1">Formação Acadêmica</h2>
         <br><br>             
         <div class="sair">
             <br>
