--- a/postagem.html
+++ b/postagem.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Blog da Professora Diane</h1>
         <br>        
-        <h2 class="h2-1">Postagem da Professora Diane Giovanini</h2>
+        <h2 class="h2-1">Postagem</h2>
         <br><br>             
         <div class="sair">
             <br>
