--- a/videoApresentacao.html
+++ b/videoApresentacao.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="css/videoApresentacao.css" />
     </head>    
     <body>
-        <h1>Blog da Professora Diane</h1> 
+        <h1>Blog da Professora Diane Giovanini</h1> 
         <br><br>       
-        <h2>Vídeo de Apresentação da Professora Diane Giovanini</h2>
+        <h2>Vídeo de Apresentação</h2>
         <br><br><br>        
         <div>
             <br><br>
