--- a/curiosidade.html
+++ b/curiosidade.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Blog da Professora Diane Giovanini</h1>
         <br>        
-        <h2 class="h2-1">Curiosidade da Professora Diane</h2>
+        <h2 class="h2-1">Curiosidade</h2>
         <br><br>             
         <div class="sair">
             <br>
