--- a/sobre.html
+++ b/sobre.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet"  href="css/sobre.css">
     </head>
     <body>
-        <h1>Blog da Professora Diane</h1>
+        <h1>Blog da Professora Diane Giovanini</h1>
         <br>        
-        <h2 class="h2-1">Sobre a Professora Diane Giovanini</h2>
+        <h2 class="h2-1">Sobre</h2>
         <br><br>             
         <div class="sair">
             <br>
