--- a/postagem.html
+++ b/postagem.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet"  href="css/Postagem.css">
     </head>
     <body>
-        <h1>Blog da Professora Diane</h1>
+        <h1>Blog da Professora Diane Giovanini</h1>
         <br>        
         <h2 class="h2-1">Postagem</h2>
         <br><br>             
