--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </li>
                 <br>
                 <li>
-                    <a href= "Postagem.html" target="_self" class="menuLi">Postagem</a>
+                    <a href= "postagem.html" target="_self" class="menuLi">Postagem</a>
                 </li>
                 <br>
                 <li>
