--- a/index.html
+++ b/index.html
@@ -12,7 +12,35 @@
         </h1>
         <br><br>
         <h2>Fotos do Perfil</h2> 
-        <br><br><br>     
+        <br><br><br> 
+        <div class="contener">
+              
+        <div class="item">
+            <img src="imagens/foto2.jpg" alt="" width="500px" height="920px">
+        </div>
+        <div>        
+            <div class="item2">
+                <img src="imagens/Foto1.jpg" alt="" width="450px" height="450px">
+            </div>
+            <div class="item2">
+                <img src="imagens/Foto3.jpg" alt="" width="450px" height="450px">
+            </div>
+        </div>
+        <div>
+            <div class="item3">
+                <img src="imagens/Foto5.jpg" alt="" width="400px" height="300px">
+            </div>
+            <div class="item3">
+                <img src="imagens/foto6.jpg" alt="" width="400px" height="300px">
+            </div>
+            <div class="item3">
+                <img src="imagens/Foto7.webp" alt="" width="400px" height="300px">
+            </div>
+        </div>
+    </div>
+
+
+        <!--   
         <div class="baner">
             <img src="imagens/Foto1.jpg" alt="Foto do Perfil: Foto da Professora Diane." 
             width="350px" height="400px">
@@ -23,6 +51,9 @@
             <img src="imagens/Foto3.jpg" alt="Foto do Perfil: Foto da Professora Diane." 
             width="350px" height="400px">
         </div>
+        --> 
+
+        
         <br><br>
         <h3 class="h3">Acesse o Menu do Nosso Blog</h3>
         <br><br>
