stsrt do projeto

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
         </div>
         <div>        
             <div class="item2">
-                <img src="imagens/Foto1.jpg" alt="" width="450px" height="450px">
+                <img src="imagens/foto1.jpg" alt="" width="450px" height="450px">
             </div>
             <div class="item2">
-                <img src="imagens/Foto3.jpg" alt="" width="450px" height="450px">
+                <img src="imagens/foto3.jpg" alt="" width="450px" height="450px">
             </div>
         </div>
         <div>
             <div class="item3">
-                <img src="imagens/Foto5.jpg" alt="" width="400px" height="300px">
+                <img src="imagens/foto5.jpg" alt="" width="400px" height="300px">
             </div>
             <div class="item3">
                 <img src="imagens/foto6.jpg" alt="" width="400px" height="300px">
             </div>
             <div class="item3">
-                <img src="imagens/Foto7.webp" alt="" width="400px" height="300px">
+                <img src="imagens/foto7.webp" alt="" width="400px" height="300px">
             </div>
         </div>
     </div>
@@ -53,7 +53,7 @@
         </div>
         --> 
 
-        
+
         <br><br>
         <h3 class="h3">Acesse o Menu do Nosso Blog</h3>
         <br><br>
